<resources>
    <string name="app_name">Contact_Share</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="Subject">
        <item>"Data Structure and Algorithm"</item>
        <item>"Computer Organization"</item>
        <item>"Value and Ethics"</item>
        <item>"Environment"</item>
        <item>"Digital and Analog Circuit"</item>
        <item>"Physics"</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="hintuser">emailID</string>
    <string name="pass_in_number">password in number</string>
    <string name="createaccount">Create Account</string>
    <string name="alreadylog">Already Have A Account Click Log In</string>
    <string name="login">LogIn</string>
    <string name="provide">Provide Email and Password more than six Character</string>
    <string name="hi">Hi Download The Student List To Fasten Up Process Next Time</string>
    <string name="fileselector">file selector</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="logOut">Log Out</string>
    <string name="signIn">SignIn</string>
    <string name="digital">Digital</string>
    <string name="created">User Account Created</string>
    <string name="error">Some Error occured contact the developer</string>
    <string name="permission">Permission Denied</string>
    <string name="empty">Seems Empty</string>
    <string name="hang">Hang On</string>
    <string name="success">Successful</string>
    <string name="lati">latitude:</string>
    <string name="lon">longitude:</string>
</resources>
